--- a/application.yml
+++ b/application.yml
@@ -5,3 +5,9 @@ eureka:
     instance-info-replication-interval-seconds: 5
     initial-instance-info-replication-interval-seconds: 6
 
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/JayaprakashJayavel/distributed-config.git
