Added queue name

--- a/application.yml
+++ b/application.yml
@@ -6,5 +6,5 @@ management:
   security:
     enabled: false
 
-queueName=billing-queue
-billingQueueName=billing-queue
+queueName=umsbilling
+billingQueueName=umsbilling
